<resources>
    <string name="app_name">igniters</string>
    <string name="logo">logo</string>
    <string name="main_line">"- Smart street light controller"</string>
    <string name="one_line_text">Lighting up TOMORROW: NEXT - GEN Solution for Automated \n
STREET LIGHTING</string>
    <string name="get_started">Get Started</string>
    <string name="sri">logo</string>
    <string name="welcome">Welcome back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="top_design">top_design</string>
    <string name="icon">icon</string>
    <string name="chromepet">Chromepet</string>

    <string-array name="area_name_val">
        <item>Chromepet</item>
        <item>thiruvanmyuir</item>
    </string-array>

</resources>