<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/main_bg_1"
    tools:context=".FirstPage">

    <ImageView
        android:id="@+id/igniters"
        android:layout_width="291dp"
        android:layout_height="99dp"
        android:layout_marginTop="80dp"
        android:alpha=".9"
        android:src="@drawable/igniters_style_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/main_tag_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/main_line"
        android:fontFamily="cursive"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:paddingVertical="8dp"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/igniters"
        tools:ignore="RtlSymmetry" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="40dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha=".7"
            android:background="@drawable/gradient1">

            <TextView
                android:id="@+id/one_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/cormorantgaramondmedium"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/one_line_text"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/get_started_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/one_line"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/yellow"
                android:fontFamily="@font/jurabold"
                android:padding="20dp"
                android:text="@string/get_started"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>